<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/roots"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@color/background"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/title_left_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@drawable/ykn_title_back_background" />

        <TextView
            android:id="@+id/title_middle_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:text="@string/plugin_setting_title"
            android:textColor="@color/color_a"
            android:textSize="22sp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="16dp" >

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" 
                        android:layout_marginLeft="4dp">

                        <LinearLayout
                            android:id="@+id/icon_bg"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:gravity="center" >

                            <ImageView
                                android:id="@+id/plugin_icon"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:scaleType="centerCrop" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/plugin_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/icon_bg"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="6dp"
                            android:textColor="@color/color_a"
                            android:textSize="18sp" />
						
                        <RelativeLayout 
                            android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
                            android:layout_below="@id/plugin_name"
                            android:layout_toRightOf="@id/icon_bg"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">
                            <ImageView
	                            android:id="@+id/onoff_icon"
	                            android:layout_width="wrap_content"
	                            android:layout_height="wrap_content"
	                            android:layout_centerVertical="true"
	                            />	
	                        <TextView
	                            android:id="@+id/onoff_status"
	                            android:layout_toRightOf="@id/onoff_icon"
	                            android:layout_width="wrap_content"
	                            android:layout_height="18dp"
	                            android:layout_marginLeft="6dp"
	                            android:textSize="14sp"
	                            android:gravity="center"
	                            android:textColor="@color/color_b"
	                            android:layout_centerVertical="true"/>
                        </RelativeLayout>
                        
                        <TextView
                            android:id="@+id/plugin_desc"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/icon_bg"
                            android:layout_marginTop="16dp"
                            android:textSize="14sp"
                            android:textColor="@color/color_b" />
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/content"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp" >
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/push_toggle_layout"
                        android:layout_width="fill_parent"
                        android:layout_height="46dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/cell_bg_selector"
                        android:visibility="gone" >

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="12dp"
                            android:text="@string/plugin_notify"
                            android:textColor="@color/color_a"
                            android:textSize="18sp" />

                        <ImageView
                            android:id="@+id/push_toggle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerInParent="true"
                            android:background="@drawable/round_open" />

                        <TextView
                            android:id="@+id/push_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_toLeftOf="@id/push_toggle"
                            android:textColor="@color/color_b"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <Button
                        android:id="@+id/clear_plugin_history"
                        android:layout_width="fill_parent"
                        android:layout_height="46dip"
                        android:layout_gravity="center"
                        android:background="@drawable/btn_white_bg_selector"
                        android:gravity="center"
                        android:text="@string/plugin_clear_history"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/color_a"
                        android:textSize="18sp" 
                        android:visibility="gone"/>

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="46dip"
                        android:layout_gravity="center"
                        android:layout_marginBottom="46dp"
                        android:layout_marginTop="16dp" >

                        <Button
                            android:id="@+id/plugin_install"
                            android:layout_width="fill_parent"
                            android:layout_height="46dip"
                            android:layout_gravity="center"
                            android:background="@drawable/btn_blue_bg_selector"
                            android:gravity="center"
                            android:text="@string/plugin_install"
                            android:textColor="@color/color_c"
                            android:textSize="18sp"
                            android:visibility="gone" />

                        <Button
                            android:id="@+id/plugin_uninstall"
                            android:layout_width="fill_parent"
                            android:layout_height="46dip"
                            android:layout_gravity="center"
                            android:background="@drawable/btn_red_bg_selector"
                            android:gravity="center"
                            android:text="@string/plugin_uninstall"
                            android:textColor="@color/color_c"
                            android:textSize="18sp"
                            android:visibility="gone" />
                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <View
            android:layout_width="fill_parent"
            android:layout_height="6dp"
            android:background="@drawable/title_shadow" />
    </FrameLayout>

</LinearLayout>